--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Regista</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
@@ -10,6 +10,7 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="icon" type="image/png" href="./ico.png" />
 
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
